src/test/ui/associated-types/defaults-cyclic-fail-1.stderr
error[E0275]: overflow evaluating the requirement `<usize as Tr>::A == _`
  --> $DIR/defaults-cyclic-fail-1.rs:30:14
   |
LL |     type B = &'static Self::A;
   |              ^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
